monitoring/manifests/remote-ingest/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ingest-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: ingest-basic-auth-secret
